--- a/Take-home_Ex/Take-home_Ex02/Take-home_Ex02.qmd
+++ b/Take-home_Ex/Take-home_Ex02/Take-home_Ex02.qmd
@@ -718,6 +718,8 @@ lolly_m + lolly_r + lolly_s +
 
 5.  **Removal of y-axis**: The y-axis labels (School IDs) are labelled within the bar for more efficient use of space since 3 plots are combined.
 
+***Note:*** After going through on lesson slides and Hands-on Exercise 4, I understand that it is misleading to plot average values on bar charts, even if a distribution is normally distributed. Plotting the average values on a bar chart overlooks the important information of spread and variability of the data. Adding an error bar could visually enhance the variability of the plotted data, help indicate estimated error or uncertainty to give a general sense of how precise a measuement is.
+
 ## 3.3 Relationship between Gender and Scores
 
 Density plots are used to illustrate the disparity in distribution across genders for the 3 subjects.
