--- a/Hands-on_Ex/Hands-on_Ex04/Hands-on_Ex04c.qmd
+++ b/Hands-on_Ex/Hands-on_Ex04/Hands-on_Ex04c.qmd
@@ -178,8 +178,17 @@ ggplot(my_sum) +
              color='red', 
              size = 1.5,
              alpha = 1) + 
-  labs(x = "Maths score",
-       title = "95% confidence interval of mean maths score by race")
+  labs(title="95% confidence interval of mean maths score by race",
+       x= "Maths score",
+       y= "Mean") +   
+  theme(
+    legend.position = "none",
+    #panel.grid.major = element_blank(),
+    axis.title.y = element_text(hjust=1, angle=0),
+    axis.text.y = element_text(),
+    plot.title = element_text(hjust=0, face="bold"),
+    plot.background = element_rect(fill="#f5f5f5",colour="#f5f5f5") ,
+    )  
 ```
 
 ::: {.brainbox .brain data-latex="brain"}
@@ -567,3 +576,7 @@ hop <-
 
 hop
 ```
+
+# 6 Reference
+
+-   Kam, T.S. (2023). [Visualising Uncertainty](https://r4va.netlify.app/chap11).
