--- a/Hands-on_Ex/Hands-on_Ex06/Hands-on_Ex06.qmd
+++ b/Hands-on_Ex/Hands-on_Ex06/Hands-on_Ex06.qmd
@@ -30,7 +30,9 @@ This hands-on exercise aims to plot the following data visualsations with R:
 
 # 2 Getting Started
 
-::: panel-tabset \## Installing & Launching R Packages
+:::panel-tabset
+
+## Installing & Launching R Packages
 
 For this exercise, the **scales**, **viridis**, **lubridate**, **ggthemes**, **gridExtra**, **readxl**, **knitr**, **data.table** and **tidyverse** packages will be used.
 
@@ -420,7 +422,7 @@ rice %>%
   newggslopegraph(Times = Year, 
                   Measurement = Yield, 
                   Grouping = Country,
-                Title = "Rice Yield of Top 11 Asian Counties",
+                Title = "Rice Yield of Top 11 Asian Countries",
                 SubTitle = "1961-1980",
                 Caption = "My VA Prof: Dr. Kam Tin Seong",
                 DataLabelFillColor = "#f5f5f5",) +
@@ -442,7 +444,7 @@ rice %>%
   mutate(Year = factor(Year)) %>%
   filter(Year %in% c(2005, 2006, 2007, 2008, 2009, 2010)) %>%
   newggslopegraph(Year, Yield, Country,
-                Title = "Rice Yield of Top 11 Asian Counties",
+                Title = "Rice Yield of Top 11 Asian Countries",
                 SubTitle = "2005 to 2010",
                 Caption = NULL,
                 LineColor = c("#c7c8cc", "#c7c8cc", "#c7c8cc", "#c7c8cc","red","#c7c8cc","#c7c8cc","#c7c8cc","#c7c8cc","#c7c8cc"),      
@@ -463,7 +465,7 @@ rice %>%
   mutate(Year = factor(Year)) %>%
   filter(Year %in% c(2005, 2006, 2007, 2008, 2009, 2010)) %>%
   newggslopegraph(Year, Yield, Country,
-                Title = "Rice Yield of Top 11 Asian Counties",
+                Title = "Rice Yield of Top 11 Asian Countries",
                 SubTitle = "2005 to 2010",
                 Caption = NULL,
                 LineColor = c("Korea" = "#e0218a", "Thailand" = "#FFBC2F"),
@@ -491,13 +493,12 @@ rice %>%
                                 y = Yield, 
                                 group = Country
                                 ))+
-  labs(title = "Rice Yield of Top 11 Asian Counties") +  
+  labs(title = "Rice Yield of Top 11 Asian Countries") +  
   theme_minimal()+
   theme(
         plot.background = element_rect(fill = "#f5f5f5", color = "#f5f2f5"),
         panel.background = element_rect(fill="#f5f5f5"))
 ```
-
 
 # 7 Horizon Chart (WIP)
 
@@ -516,7 +517,7 @@ rice %>%
   theme_few() +
   scale_fill_hcl(palette = 'RdBu') +
   labs(
-    title = "Rice Yield of Top 11 Asian Counties (From 2005 to 2010)"
+    title = "Rice Yield of Top 11 Asian Countries (From 2005 to 2010)"
   ) +
   theme(
     panel.spacing.y = unit(0, "lines"), 
@@ -531,4 +532,3 @@ rice %>%
     panel.background = element_rect(fill = "#f5f5f5", color = "#f5f5f5"),
     plot.background = element_rect(fill = "#f5f5f5", color = "#f5f5f5"))
 ```
-
